[metadata]
name = leetcode
version = 0.0.1
description = A CLI tool for LeetCode problems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/klsoller/LeetCode
author = Kaleb
author_email = 0bKdF@example.com
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = 
    scripts
install_requires =
    numpy >= 2
python_requires = >= 3.6
package_dir = 
    =src
zip_safe = no

[options.package_data]
scripts = py.typed

[flake8]
max-line-length = 160



